# actixPractice

./: .env  Cargo.toml  README.md
src/: client.rs  clientMain.rs  clientMainFail.rs  clientMainSecretKey.rs  clientMainSuccess.rs  config.rs  handlers.rs  models.rs  server.rs  serverMain.rs  session.rs
