[package]
name = "actixPractice"
version = "0.1.0"
authors = ["jitterbug"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/serverMain.rs"

[[bin]]
name = "client"
path = "src/clientMain.rs"

[[bin]]
name = "client_fail"
path = "src/clientMainFail.rs"

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-codec = "0.2.0"
actix-files = "0.2.1"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
awc = "1.0.1"
bytes = "0.5.3"
env_logger = "0.7"
futures = "0.3.1"
#actix-http = "1.0.1"
#actix-service = "1.0.5"
serde = {version = "1.0.104", features = ["derive"]}

dotenv = "0.15.0"
config = "0.10.1"

tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5.1"